--- a/style.css
+++ b/style.css
@@ -5,21 +5,19 @@ body {
         background-repeat: none;
 }
 .bar {
-        background-color: #FFD700;
+        background-color: black;
+        opacity: 0.6;
         padding: 40px;
         margin-left: -8px;
         margin-top: -8px;
         height: 20px;
-        color: white;
-        opacity: 1;
         border-style: solid;
-        border-color: black;
-        position: fixed;2
+        border-color: white;
+        position: fixed;
         text-align: center;
 }
 .header {
-        opacity: 1;
-        color: black;
+        color: white;
         text-decoration-line: none;
         border-style: none solid;
         padding: 15px;
@@ -31,7 +29,9 @@ body {
 }
 .body {
         text-align: center;
+        color: white;
 }
 h1 {
         text-align: center;
+        color: white;
 }
