--- a/style.css
+++ b/style.css
@@ -6,20 +6,21 @@ body {
 }
 .bar {
         background-color: black;
-        opacity: 0.6;
+        opacity: 0.4;
         padding: 40px;
         margin-left: -8px;
         margin-top: -8px;
         height: 20px;
-        border-style: solid;
-        border-color: white;
+        width: 100%;
         position: fixed;
         text-align: center;
 }
 .header {
         color: white;
+        text-align: center;
         text-decoration-line: none;
         border-style: none solid;
+        border-width: 2px;
         padding: 15px;
         transition: 1s all ease;
 }
