--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-
 body {
         background-color: #03a406;
         background-image: url("bckgrd.jpg");
         background-repeat: none;
+}
+.body {
+        background-color: black;
+        opacity: 0.8
 }
 .bar {
         background-color: black;
