--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
         color: green;
         transition: 1s all ease;
 }
-.body {
+.inner {
         text-align: center;
         color: white;
 }
