--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
         background-repeat: none;
 }
 .bar {
-        background-color: black;
-        opacity: 0.4;
+        background-color: rgb(0, 0, 0, 0.6);
         padding: 40px;
         margin-left: -8px;
         margin-top: -8px;
