--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
         background-color: #03a406;
-        background-image: url("bckgrd.jpg");
+        background-image: url("background.jpg");
         background-repeat: none;
 }
 .bar {
