--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
         background-color: #03a406;
-        background-image: url("background.jpg");
+        background-image: url("background.jpeg");
         background-repeat: none;
 }
 .bar {
@@ -33,4 +33,7 @@ body {
 h1 {
         text-align: center;
         color: white;
+}
+ul {
+        background-color: rgb(0, 0, 0, 0.6);
 }
