--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
         background-color: #03a406;
         background-image: url("background.jpeg");
         background-repeat: none;
+        background-size: cover;
 }
 .bar {
         background-color: rgb(0, 0, 0, 0.6);
