--- a/style.css
+++ b/style.css
@@ -37,4 +37,9 @@ h1 {
 }
 ul {
         background-color: rgb(0, 0, 0, 0.6);
+        padding: 40px;
+        margin-bottom: -40px;
+}
+.footlinks {
+        color: white;
 }
