--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
         text-align: center;
         color: white;
 }
-ul {
+.bar2 {
         background-color: rgb(0, 0, 0, 0.6);
         padding: 40px;
         margin-bottom: -40px;
