--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
         background-size: cover;
         overflow: hidden;
 }
+body::-webkit-scrollbar {
+        display: hidden;
+}
 .bar {
         background-color: rgb(0, 0, 0, 0.6);
         padding: 40px;
