--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar {
         text-align: center;
         text-decoration-line: none;
         padding: 15px;
-        border-style: {none solid none none};
+        border-style: none solid none none;
         border-width: 2px;
         border-color: white;
         margin-left: -5px;
