--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@
         background-color: rgb(0,0,0,1);
         transition: 1s all ease;
 }
+#end {
+        border-style: none !important;
+}
 body {
         background-color: #03a406;
         background-image: url("background.jpeg");
