--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         margin-left: -8px;
         margin-top: -8px;
         height: 20px;
-        width: auto;
+        width: 100%;
         position: fixed;
         text-align: center;
 }
