--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ body {
 body::-webkit-scrollbar {
         display: none;
 }
+.banner {
+        background-color: rgb(0, 0, 0, 0.6);
+        padding: 5px;
+        text-align: center;
+}
+
 .inner {
         text-align: center;
         color: white;
