--- a/style.css
+++ b/style.css
@@ -41,11 +41,14 @@ body::-webkit-scrollbar {
         display: none;
 }
 .banner {
-        background-color: rgb(0, 0, 0, 0.6);
         padding: 5px;
         text-align: center;
 }
-
+.person {
+        color: white;
+        background-color: (0, 255, 0, 0.6);
+}
+.person#id = 
 .inner {
         text-align: center;
         color: white;
