--- a/style.css
+++ b/style.css
@@ -48,7 +48,12 @@ body::-webkit-scrollbar {
         color: white;
         background-color: (0, 255, 0, 0.6);
 }
-.person#id = 
+.person#junior {
+        background-color: (255, 255, 0, 0.6) !important;
+}
+.person#honarary {
+        background-color: (255, 255, 255, 0.6) !important;
+}
 .inner {
         text-align: center;
         color: white;
