--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ body::-webkit-scrollbar {
 }
 .person {
         color: white;
-        background-color: (0, 255, 0, 0.6);
+        background-color: rgb(0, 255, 0, 0.6);
 }
 .person#junior {
-        background-color: (255, 255, 0, 0.6) !important;
+        background-color: rgb(255, 255, 0, 0.6) !important;
 }
-.person#honarary {
-        background-color: (255, 255, 255, 0.6) !important;
+.person#honorary {
+        background-color: rgb(255, 255, 255, 0.6) !important;
 }
 .inner {
         text-align: center;
