--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ body::-webkit-scrollbar {
 .person {
         color: white;
         background-color: rgb(0, 255, 0, 0.6);
+        width: 30%;
+        margin-left: -8px;
+        margin-right: -8px;
 }
 #junior {
         background-color: rgb(255, 255, 0, 0.6) !important;
