--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body::-webkit-scrollbar {
         margin-right: -8px;
         padding: 5px;
         text-align: center;
+        border-radius: 5px;
 }
 #junior {
         background-color: rgb(255, 255, 0, 0.6) !important;
