--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body::-webkit-scrollbar {
         padding: 5px;
         text-align: center;
         border-radius: 5px;
+        display: inline-block;
 }
 #junior {
         background-color: rgb(255, 255, 0, 0.6) !important;
