--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
         background-image: url("background.jpeg");
         background-repeat: none;
         background-size: cover;
+        text-align:center;
         overflow-y: scroll;
         /*For other browsers*/
         -ms-overflow-style: none;
@@ -44,8 +45,7 @@ body::-webkit-scrollbar {
         color: white;
         background-color: rgb(0, 255, 0, 0.6);
         width: 30%;
-        margin-left: -8px;
-        margin-right: -8px;
+        margin: 10px;
         padding: 5px;
         text-align: center;
         border-radius: 5px;
