--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h1 {
         margin-bottom: -8px;
         margin-right: -8px;
         margin-left: -8px;
+        text-align: justify !important;
 }
 .footlinks {
         color: white;
