--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ body::-webkit-scrollbar {
         text-align: center;
         border-radius: 5px;
         display: inline-block;
+        transition: 1s all ease;
+}
+.person:hover {
+        color:black;
+        transition: 1s all ease;
 }
 #junior {
         background-color: rgb(255, 255, 0, 0.6) !important;
