--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body::-webkit-scrollbar {
         color: black;
         transition: 1s all ease;
 }
-.person[id*="junior] {
+.person[id*="junior"] {
         background-color: rgb(255, 255, 0, 0.6) !important;
 }
 #honorary {
