--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body::-webkit-scrollbar {
         display: block;
         margin-left: auto;
         margin-right: auto;
+        padding: 5px;
 }
 .person:hover {
         color: black;
